Fri Nov 19 10:55:03 2004    Gary Maxey  <gary.maxey@hp.com>

        * tao/Any_Basic_Impl.cpp

          In switch statements do not include case for CORBA::tk_ulonglong
          when ACE_LACKS_LONGLONG_T.
        
        * tao/Any_Basic_Impl.h

          Leave "CORBA::ULongLong ull" out of "u_" union when 
          ACE_LACKS_LONGLONG_T.

        * tao/IIOP_Transport.cpp

          In TAO_IIOP_Transport::send, added debug statement for send
          failure so can see errno which becomes unavailable at higher
          levels.

        * tao/orbconf.h

          Conditionally compile constants for Tandem pluggable
          protocols.
        
Fri Nov 19 10:52:03 2004  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Latency/DII/run_test.pl:
        * performance-tests/Latency/DSI/run_test.pl:
        * performance-tests/Latency/Deferred/run_test.pl:
        * performance-tests/Latency/Thread_Pool/run_test.pl:

          Increased the timeouts to allow for slower machines.

        * examples/POA/Explicit_Activation/alternate.conf.xml:
        * examples/Quoter/client.conf:
        * examples/Quoter/client.conf.xml:
        * examples/Quoter/server.conf:
        * examples/Quoter/server.conf.xml:
        * orbsvcs/tests/AVStreams/Multicast/components_svc.conf.xml:
        * performance-tests/Cubit/TAO/MT_Cubit/svc.conf:
        * performance-tests/Cubit/TAO/MT_Cubit/svc.conf.xml:
        * performance-tests/Latency/DII/svc.conf.xml:
        * performance-tests/Latency/DSI/svc.conf:
        * performance-tests/Latency/DSI/svc.conf.xml:
        * performance-tests/Latency/Deferred/svc.conf:
        * performance-tests/Latency/Deferred/svc.conf.xml:
        * performance-tests/Sequence_Latency/DII/svc.conf.xml:
        * performance-tests/Sequence_Latency/DSI/svc.conf:
        * performance-tests/Sequence_Latency/DSI/svc.conf.xml:
        * performance-tests/Sequence_Latency/Deferred/svc.conf: