@@ -1,3 +1,10 @@
+Fri Nov 19 10:59:00 2004    Gary Maxey  <gary.maxey@hp.com>
+
+        * utils/catior/catior.cpp
+        
+          Add ability to decode two new profile types (NSKFS and
+          NSKPW). 
+
 Fri Nov 19 10:55:03 2004    Gary Maxey  <gary.maxey@hp.com>
 
         * tao/Any_Basic_Impl.cpp
